# object-recognition

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
res/: label.csv  label_trial.csv  labelcopy.csv  readme.txt
res/eval/: eval.csv
res/own/: myout.avi
res/owntrial/: labeltrial.csv  myout.avi
res/sample/: myout.avi
res/train/: label_train.csv  label_train_ss.csv
res/validate/: label_validate.csv  label_validate_actual.csv
src/: csv_util.cpp  csv_util.hpp  filter.cpp  filter.hpp  orCsvUtil.cpp  orCsvUtil.h  orCsvUtil.hpp  orProcessing.cpp  orProcessing.hpp  orUtil.cpp  orUtil.hpp  trainMode.hpp  vidDisplay  vidDisplay.cpp
